2008-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: Add more test cases 
	for better coverage.
	* FinalizersShouldCallBaseClassFinalizerTest.cs: Moved from 
	Design.	Updated namespace.
	* Test.Rules.Correctness.mdp: Add moved rule to the MD project

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs: Moved from Design.

2008-10-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewCastOnIntegerDivisionTest.cs: New. Unit tests for 
	ReviewCastOnIntegerDivisionRule.
	* ReviewCastOnIntegerMultiplicationTest.cs: New. Unit tests for
	ReviewCastOnIntegerMultiplicationRule.

2008-10-06  Néstor Salceda  <nestor.salceda@gmail.com>

	* AttributeStringLiteralsShouldParseCorrectlyTest.cs: New.  Unit tests
	for AttributeStringLiteralsShouldParseCorrectlyRule.
	* Test.Rules.Correctness.mdp: Updated MD project file.

2008-09-23  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewDoubleAssignmentTest.cs: Change from Success to
	DoesNotApply test cases where no DUP instructions are present.
	* ReviewUselessControlFlowTest.cs: Add test case where no
	conditional branches are present in a method (e.g. empty).
	* ReviewUseOfInt64BitsToDoubleTest.cs: Change from Success
	to DoesNotApply test cases where no CALL[VIRT] or CONV_[OVF_][I|U]
	8[_UN] instructions are	present.
	* ReviewUseOfModuloOneOnIntegersTest.cs: Change from Success
	to DoesNotApply test cases where no REM[_UN] instructions are
	present.

2008-09-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidFloatingPointEqualityTest.cs: New. Updated the old
	FloatComparisonRuleTest to use the new test syntax and to have
	better coverage.
	* FloatComparisonRuleTest.cs: Removed (was renamed from above)
	* DontCompareWithNaNTest.cs: Use the new test syntax and add
	more coverage.

2008-09-21  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesTest.cs: Add more coverage.